--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h1>Angular 1.x with React Demo</h1>
         </header>
         <div class="content">
-            <h2>Welcome {{helloTo}},</h2>
+            <h2>Hi {{helloTo}}, Welcome to Angular</h2>
         </div>
         <div class="content">
             <hr /><br /><br />
-            <react-directive></react-directive>
+            <react-directive fruits="fruits"></react-directive>
         </div>
     </div>
 </body>
